--- a/src/public/content/posts/2021-04-09-emacs-d.md
+++ b/src/public/content/posts/2021-04-09-emacs-d.md
@@ -1,4 +1,4 @@
-**TL;DR** This post describes an approach to make byte compiler and various linters happy and **useful** in your `.emacs.d`, while maintaining startup performance, the ability to write embedded packages and test them. This is going to be a long post, so grab a bottle of wine, snacks and follow me. In case you lack these things, just take a look at results.
+\* TL;DR\* This post describes an approach to make byte compiler and various linters happy and **useful** in your `.emacs.d`, while maintaining startup performance, the ability to write embedded packages and test them. This is going to be a long post, so grab a bottle of wine, snacks and follow me. In case you lack these things, just take a look at results.
 
 The longest project in my life is [environment](https://github.com/d12frosted/environment), it started with [Emacs configurations](https://github.com/d12frosted/environment/tree/master/emacs) - personal frustration and my biggest time ~~waster~~ investment. I might be masochistic, but I never felt sorry for falling into this ~~trap~~ world. And boy, sometimes it is painful to maintain something in this ever-mutating and dynamic system.
 
@@ -16,9 +16,13 @@ The closest approach I know about is [hlissner/doom-emacs](https://github.com/hl
 
 But it's Emacs, right? Everything is possible! So let's find a way to make byte compiler and linters helpful and enable testing of Emacs configurations.
 
-<img src="/images/2021-04-09-emacs-d/2022-07-19-21-58-18-emacs-d-1.webp" class="img-half img-float-left" />
+<div class="d12-images-block-[100%]">
 
-<img src="/images/2021-04-09-emacs-d/2022-07-19-21-58-18-emacs-d-2.webp" class="img-half img-float-right" />
+![](/images/2021-04-09-emacs-d/2022-07-19-21-58-18-emacs-d-1.webp)
+
+![](/images/2021-04-09-emacs-d/2022-07-19-21-58-18-emacs-d-2.webp)
+
+</div>
 
 <!--more-->
 
