--- a/src/public/content/posts/2018-10-13-gifify.md
+++ b/src/public/content/posts/2018-10-13-gifify.md
@@ -304,4 +304,4 @@ fi
 
 # More quality
 
-In this post, I covered only quality improvements from using a custom palette. But actually, there are other ways to tweak you GIF when using FFmpeg. You can find out more in High quality GIF with FFmpeg.
+In this post, I covered only quality improvements from using a custom palette. But actually, there are other ways to tweak you GIF when using FFmpeg. You can find out more in [High quality GIF with FFmpeg](https://blog.pkh.me/p/21-high-quality-gif-with-ffmpeg.html).
