update a bunch of posts

--- a/src/public/content/posts/2018-10-13-gifify.md
+++ b/src/public/content/posts/2018-10-13-gifify.md
@@ -6,7 +6,7 @@
 
 </div>
 
-When it comes to converting video to GIF, one usually gets a huge file and a questionable quality. Most of the guides suggest to use FFmpeg to do the conversion, but usually, they don't bother with the quality of the result. As it turns out, folks from FFmpeg made some huge steps in improving the GIF output.
+When it comes to converting video to GIF, you usually end up with a huge file and questionable quality. Most guides suggest using FFmpeg for the conversion, but they rarely address the quality of the result. As it turns out, the FFmpeg team has made some significant improvements in GIF output quality.
 
 <!--more-->
 
@@ -24,7 +24,7 @@ $ ffmpeg -i input.mov -vf "fps=10,scale=320:-1:flags=lanczos,palettegen palette.
 $ ffmpeg -i input.mov -i palette.png -filter_complex "fps=10,scale=320:-1:flags=lanczos[x];[x][1:v]paletteuse" output.gif
 ```
 
-Since I am not good at remembering this kind of commands (and I hate to cycle the history of commands), I've created a simple script for doing exactly this. It's called `gifify` and you can find it in my [.environment](https://github.com/d12frosted/environment/blob/master/bin/gifify) repository.
+Since I'm not good at remembering these commands (and I hate cycling through command history), I've created a simple script that does exactly this. It's called `gifify` and you can find it in my [.environment](https://github.com/d12frosted/environment/blob/master/bin/gifify) repository.
 
 ``` bash
 $ gifify -i file.mov # output is file.gif
@@ -68,16 +68,16 @@ Strong points of this script:
     $ gifify -i file.mov -t 26
     ```
 
-My concern usually is about quality, not about the physical size if the output. But you have several options here:
+My main concern is usually quality, not file size. However, if you do need to reduce the output size, you have several options:
 
-1.  The lesser FPS is, the lesser output is. In most cases, 15 FPS is good enough.
-2.  Use scaling. When it comes to screen video, you rarely need the original size, scale it a bit.
-3.  In case you are good with the default palette, just use it.
+1.  Lower the FPS. In most cases, 15 FPS is good enough, and it significantly reduces file size.
+2.  Use scaling. For screen recordings, you rarely need the original size—scaling down can help considerably.
+3.  Use the default palette if you're comfortable with slightly lower quality.
 4.  Use compression provided by `gifsicle`.
 
 # Palettes: default vs custom
 
-Here are several examples, were the difference between default and custom palette is visible. In the first example, the difference is more obvious than in others, but still.
+Here are several examples where the difference between default and custom palettes is visible. In the first example, the difference is more obvious than in the others, but you can still spot improvements in all of them.
 
 <div class="d12-images-block-[100%]">
 
@@ -118,7 +118,7 @@ $ curl https://raw.githubusercontent.com/d12frosted/environment/master/utils/bin
 $ chmod +x /path/to/gifify
 ```
 
-Note that `gifify` should be in the folder that is visible from your `PATH`. I usually put `gifify` in `$HOME/.local/bin`.
+Note that `gifify` should be in a folder that's in your `PATH`. I usually put `gifify` in `$HOME/.local/bin`.
 
 # Source code
 
@@ -304,4 +304,4 @@ fi
 
 # More quality
 
-In this post, I covered only quality improvements from using a custom palette. But actually, there are other ways to tweak you GIF when using FFmpeg. You can find out more in [High quality GIF with FFmpeg](https://blog.pkh.me/p/21-high-quality-gif-with-ffmpeg.html).
+In this post, I've only covered quality improvements from using a custom palette. However, there are other ways to tweak your GIF when using FFmpeg. You can find out more in [High quality GIF with FFmpeg](https://blog.pkh.me/p/21-high-quality-gif-with-ffmpeg.html).
