--- a/src/public/content/posts/2018-10-13-gifify.md
+++ b/src/public/content/posts/2018-10-13-gifify.md
@@ -71,7 +71,7 @@ Strong points of this script:
 My main concern is usually quality, not file size. However, if you do need to reduce the output size, you have several options:
 
 1.  Lower the FPS. In most cases, 15 FPS is good enough, and it significantly reduces file size.
-2.  Use scaling. For screen recordings, you rarely need the original size—scaling down can help considerably.
+2.  Use scaling. For screen recordings, you rarely need the original size - scaling down can help considerably.
 3.  Use the default palette if you're comfortable with slightly lower quality.
 4.  Use compression provided by `gifsicle`.
 
