--- a/src/public/content/posts/2020-01-06-env-extra-v1.0.0.0.md
+++ b/src/public/content/posts/2020-01-06-env-extra-v1.0.0.0.md
@@ -1,12 +1,12 @@
-It's hard (though possible) to imagine a script that doesn't access environment variables. In Haskell ecosystem there is a good built-in module [System.Environment](https://hackage.haskell.org/package/base-4.12.0.0/docs/System-Environment.html) that does the job, but it has several drawbacks. First of all, it uses `String` data type as input and as an output. And secondly, it lives in `IO`. Both of these drawbacks are not that critical, but calling all these `Text.pack`, `Text.unpack` and `liftIO` in every program drives me nuts. So several years ago (somewhere in 2016) I decided to write a [simple library](https://github.com/d12frosted/env-extra) that wraps it for me.
+It's hard (though possible) to imagine a script that doesn't access environment variables. In the Haskell ecosystem, there's a good built-in module called [System.Environment](https://hackage.haskell.org/package/base-4.12.0.0/docs/System-Environment.html) that does the job, but it has several drawbacks. First, it uses `String` as both input and output. Second, it lives in `IO`. Whilst these drawbacks aren't critical, calling all these `Text.pack`, `Text.unpack`, and `liftIO` functions in every programme drives me nuts. So several years ago (around 2016), I decided to write a [simple library](https://github.com/d12frosted/env-extra) to wrap it for me.
 
-I've been using this library for a long time and today I uploaded it to [Hackage](https://hackage.haskell.org/package/env-extra). While it's really small, I still think that some of you might find it useful, because it has nice features that original `System.Environment` doesn't have. Let's take a look!
+I've been using this library for a long time, and today I'm uploading it to [Hackage](https://hackage.haskell.org/package/env-extra). Whilst it's really small, I still think some of you might find it useful, as it has nice features that the original `System.Environment` doesn't have. Let's take a look!
 
 <!--more-->
 
-So in the nutshell, there are three functions to access environment variables:
+In a nutshell, there are three functions to access environment variables:
 
-- `envMaybe` of type `( MonadIO m, IsString a ) => Text -> m (Maybe a)` - a wrapper for `lookupEnv`. Aside from working with `Text` input it also lives in `MonadIO` and returns an `IsString`, which the most interesting part here. I will talk about it shortly.
+- `envMaybe` of type `( MonadIO m, IsString a ) => Text -> m (Maybe a)` - a wrapper for `lookupEnv`. Aside from working with `Text` input, it also lives in `MonadIO` and returns an `IsString`, which is the most interesting part here. I'll talk about it shortly.
 - `getEnv` of type `( MonadThrow m, MonadIO m, IsString a ) => Text -> m a` - the unsafe version of `envMaybe`.
 - `envRead` of type `( MonadIO m ) => Reader a -> Text -> m (Maybe a)` - a helper function that also reads (or parses) a value from environment variable by specifying the [Reader](https://hackage.haskell.org/package/text-1.2.4.0/docs/Data-Text-Read.html).
 
@@ -22,7 +22,7 @@ Nothing
 Just "Boris"
 ```
 
-What's interesting, `envMaybe` is polymorphic in it's return type, which means that it plays nicely in composition chains and you don't need to explicitly convert between `Text`, `String`, `ByteString` data types.
+What's interesting is that `envMaybe` is polymorphic in its return type, which means it plays nicely in composition chains and you don't need to explicitly convert between `Text`, `String`, and `ByteString` data types.
 
 ``` haskell
 > :t putStrLn
@@ -67,4 +67,4 @@ In some rare cases you might want to use the `Read` instance for parsing. Though
 Just SomeStatus2
 ```
 
-I hope you'll find this library helpful. Please do send me your comments, idea and thoughts! And any contribution is welcome!
+I hope you'll find this library helpful. Please do send me your comments, ideas, and thoughts! Contributions are always welcome!
